--- a/index.html
+++ b/index.html
@@ -46,30 +46,23 @@
 
 
       <section id="main_content">
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+        <h1>
+<a id="mongodb-php-registration-login-system" class="anchor" href="#mongodb-php-registration-login-system" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>MongoDB-PHP-Registration-Login-System</h1>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+<p>A very basic Registration and Login System using PHP and MongoDB.
+Please note the following</p>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
-
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://help.github.com/articles/basic-writing-and-formatting-syntax/#mentioning-users-and-teams" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+<ol>
+<li><p>This system conists of a Registration page, to register new users, a Login page, for registered users.</p></li>
+<li><p>A home page once a user logs in. </p></li>
+<li><p>It also contains register_action and login_action to handle the data from register and login page respectively. </p></li>
+<li><p>It has page access restrictions imposed using session such that a logged in user cannot access login or registration page and a user who is not logged in cannot access the home page. </p></li>
+<li><p>It uses hashing to store passwords. And the BCRYPT encryption method is used to encrypt and store the passwords as opposed to the md5 and sha1 encryptions. </p></li>
+<li><p>It consists of a seperate library file which contains the functions used in the system. </p></li>
+<li><p>It was made with learning in mind and I'm open to all improvements that can be made to the system. </p></li>
+<li><p>Feel free to use it as you please.</p></li>
+<li><p>I've also used Bootstrap but haven't uploaded the bootstrap files. You can use them by simply addding the bootstrap folders to the same directory as these files. </p></li>
+</ol>
       </section>
 
       <footer>
